--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,16 @@ footer {
   height: 24px;
   margin-left: 10px;
 }
+.tagline{
+  font-size: 1.5rem;
+}
+.box{
+  border: 2px soild black;
+  padding: 10px;
+  margin: 10px;
+  background-color: #f0f0f0;
+  border-radius: 5px;
+}
+.inside-box{
+  text-align: center;
+}
