--- a/src/App.css
+++ b/src/App.css
@@ -38,16 +38,22 @@ footer {
   margin-left: 10px;
 }
 /* Banner */
-.banner{
-  background-image: url('./assets/wp4855908.png');
-  background-repeat: no-repeat;
-  background-position: center;
+.banner {
+  background-color: #000;
   color: white;
-  text-shadow:
-  -1px -1px 0 #000,  
-  1px -1px 0 #000,
-  -1px 1px 0 #000,
-  1px 1px 0 #000;
+  text-shadow: 
+    -1px -1px 0 #000,  
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
+  display: flex;
+  flex-direction: column; 
+  align-items: center; 
+  justify-content: center; 
+  height: 100vh; 
+}
+.align-items-center {
+  justify-content: center; 
 }
 .tagline{
   font-size: 1.5rem;
@@ -62,27 +68,68 @@ footer {
 .inside-box{
   text-align: center;
 }
-/* Goku powering up */
-.goku-container{
-  position: relative;
-  display: inline-block;
-  width: 90%;
-  height: 100%
+/* Projects.js */
+.projects {
+  padding: 50px 0;
+  background-color: #000; /* Black background */
+  color: white; /* White text for contrast */
 }
 
-.goku-image{
-  display: block;
+.projects h2 {
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+  text-align: center;
+  color: white;
 }
 
-.goku-aura{
-  display: absolute;
-  top: -200px;
-  left: -20px;
-  width: 100%;
-  opacity: 0;
-  transition: opacity 0.3s ease;
+/* Card Styles */
+.projects .card {
+  background-color: #111; /* Darker card background */
+  color: white; /* White text for cards */
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
+  border: none; /* Remove border for a seamless look */
+  transition: transform 0.2s, box-shadow 0.2s;
 }
 
-.goku-container:hover .goku-aura{
-  opacity: 1;
+.projects .card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0px 6px 10px rgba(255, 0, 0, 0.8); /* Red glow on hover */
+}
+
+/* Button Styles */
+.projects .btn-primary {
+  background-color: #000; /* Black button */
+  border: 2px solid #ff0000; /* Red border */
+  color: white; /* White text */
+  transition: box-shadow 0.3s, background-color 0.3s;
+}
+
+.projects .btn-primary:hover {
+  background-color: #000; /* Ensure it stays black */
+  box-shadow: 0px 0px 10px 3px #ff0000; /* Red glow effect */
+  color: #ff0000; /* Optional: Change text to red on hover */
+  border-color: #ff0000; /* Keep the border red */
+}
+
+/* Skills.js  */
+.skills {
+  padding: 50px 0;
+  background-color: #111; /* Dark background */
+  color: white; /* White text */
+}
+
+.skills h2 {
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+  color: #f0f0f0;
+}
+
+.skills h4 {
+  color: white; 
+}
+
+.skills p {
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #ccc; /* Light grey for text */
 }
